@@ -1,3 +1,7 @@
+2012-12-02  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Fix missing endtime field for file documents
+
 2012-11-22  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Release of version 1.0.0
